--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
-  "name": "mail2bapi/YouTubeDownloader",
+  "name": "mail2bapi/youtube-downloader",
   "description": "PHP library for downloading YouTube videos",
   "homepage": "https://github.com/mail2bapi/YouTubeDownloader/tree/main",
+  "keywords": ["youtube", "youtube downloader", "mail2bapi"],
   "minimum-stability": "stable",
   "license": "MIT",
   "authors": [
@@ -11,8 +12,20 @@
     }
   ],
   "require": {
-    "php": ">=7.3.7",
+    "php": "^7.2"
+  },
+  "require-dev": {
     "phpunit/phpunit": "^9.4"
+  },
+  "autoload": {
+    "psr-4": {
+      "Mail2bapi\\YouTubeDownloader\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Mail2bapi\\YouTubeDownloader\\Tests\\": "tests/"
+    }
   },
   "config": {
     "optimize-autoloader": true
